# otus-python-developer-basic

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_10/.github/workflows/: test.yml
homework_11/: .gitlab-ci.yml
homework_12/: README.md
